--- a/package.json
+++ b/package.json
@@ -13,20 +13,21 @@
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.3.18",
-    "@types/react": "~18.2.14",
+    "@types/react": "~18.0.27",
     "dotenv": "^16.3.1",
-    "expo": "^49.0.13",
-    "expo-linking": "~5.0.2",
-    "expo-status-bar": "~1.6.0",
+    "expo": "^49.0.16",
+    "expo-linking": "^6.0.0",
+    "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.72.5",
+    "react-native": "0.71.14",
     "react-native-calendars": "^1.1301.0",
-    "react-native-gesture-handler": "~2.12.0",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^17.1.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "typescript": "^5.1.3"
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-text-input-mask": "^3.2.0",
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
