--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@clerk/clerk-expo": "^0.19.9",
+    "@react-native-community/datetimepicker": "7.2.0",
     "@react-navigation/bottom-tabs": "^6.5.9",
+    "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.3.18",
     "@types/react": "~18.0.27",
@@ -26,9 +28,9 @@
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-text-input-mask": "^3.2.0",
-    "typescript": "^4.9.4",
-    "@react-native-community/datetimepicker": "7.2.0"
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
