--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "react": "18.2.0",
     "react-native": "0.71.14",
     "react-native-calendars": "^1.1301.0",
+    "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^17.1.0",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-tab-view": "^3.5.2",
