--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.3.18",
     "@types/react": "~18.0.27",
+    "axios": "^1.6.1",
     "dotenv": "^16.3.1",
     "expo": "^49.0.16",
     "expo-linking": "^6.0.0",
