--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 CLERK_PUBLISHABLE_KEY=pk_test_c2VsZWN0LXRlcnJpZXItMjEuY2xlcmsuYWNjb3VudHMuZGV2JA
+EAS_PROJECT_ID=bd6ba29d-f61f-4663-a7ad-67ba9e87870e
