--- a/package.json
+++ b/package.json
@@ -4,36 +4,37 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@clerk/clerk-expo": "^0.19.9",
-    "@react-native-community/datetimepicker": "7.2.0",
+    "@expo/config-plugins": "~7.8.0",
+    "@react-native-community/datetimepicker": "7.6.1",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.3.18",
-    "@types/react": "~18.2.14",
+    "@types/react": "~18.2.45",
     "axios": "^1.6.1",
     "dotenv": "^16.3.1",
-    "expo": "^49.0.16",
-    "expo-linking": "~5.0.2",
-    "expo-status-bar": "~1.6.0",
+    "expo": "^50.0.0",
+    "expo-linking": "~6.2.2",
+    "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "0.73.4",
     "react-native-calendars": "^1.1301.0",
     "react-native-draggable-flatlist": "^4.0.1",
-    "react-native-gesture-handler": "~2.12.0",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^17.1.0",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-text-input-mask": "^3.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
