--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -78,10 +78,10 @@ def enableProguardInReleaseBuilds = (findProperty('android.enableProguardInRelea
 def jscFlavor = 'org.webkit:android-jsc:+'
 
 android {
-    ndkVersion rootProject.ext.ndkVersion
+    ndkVersion 23
 
-    buildToolsVersion rootProject.ext.buildToolsVersion
-    compileSdk rootProject.ext.compileSdkVersion
+    buildToolsVersion "23.0.0"
+    compileSdk 23
 
     namespace 'com.roomsrio.calendmy'
     defaultConfig {
